# ESP32-Portapack

./: .gitignore  LICENSE  README.md
3dCase/: todo.txt
BuildIt/: README.md
Source/: .clangd  .gitignore  (+10 more)
Source/main/: CMakeLists.txt  Kconfig  configuration.c  configuration.cpp  configuration.h  environment.c  environment.h  features.hpp  hmc5883l.h  i2c_drv.c  i2c_drv.h  i2cdev_esp32.c  idf_component.yml  led.cpp  led.h  lora.hpp  main.c  main.cpp  nmea_parser.c  nmea_parser.h  orientation.c  orientation.h  pinconfig.cpp  pinconfig.h  pinconfig_html.h  pp_commands.hpp  ppshellcomm.cpp  ppshellcomm.h  sensordb.c  sensordb.h  tir.cpp  tir.h  usbpart.h  webserver.h  wifihack.hpp  wifim.cpp  wifim.h
Source/main/apps/: appmanager.cpp  appmanager.hpp  ep_app.hpp  ep_app_wifispam.cpp  ep_app_wifispam.hpp
Source/main/display/: display_ssd1306.cpp  display_ssd1306.hpp  display_ws.cpp  display_ws.hpp  displaymanager.cpp  displaymanager.hpp  displayskeleton.hpp  font_latin_8x8.h
Source/main/drivers/: adxl345.c  adxl345.h  bh1750.c  bh1750.h  bmp280.c  bmp280.h  hmc5883l.c  hmc5883l.h  i2c_drv.c  i2c_drv.h  i2cdev.c  i2cdev.h  i2cdev_esp32.c  lsm303.c  lsm303.h  mpu925x.c  mpu925x.h  sht3x.c  sht3x.h  sht4x.c  sht4x.h  ssd1306.c  ssd1306.h  type_utils.c  type_utils.h
Source/main/ppi2c/: i2c_slave_driver.c  i2c_slave_driver.h  pp_handler.cpp  pp_handler.hpp  pp_structures.hpp
Source/main/sgp4/: Sgp4.h  brent.cpp  brent.h  sgp4coord.cpp  sgp4coord.h  sgp4ext.cpp  sgp4ext.h  sgp4io.cpp  sgp4io.h  sgp4pred.cpp  sgp4pred.h  sgp4unit.cpp  sgp4unit.h  visible.cpp  visible.h
(+16 files in other folders)
