idf_component_register(SRCS "configuration.c" "sensordb.c" "orientation.c" "environment.c" "ppi2c/i2c_slave_driver.c"  "drivers/i2cdev.c" "drivers/hmc5883l.c" "drivers/lsm303.c"  "drivers/mpu925x.c" "drivers/sht3x.c"  "drivers/bh1750.c"  "drivers/bmp280.c"  "drivers/adxl345.c" "nmea_parser.c" "main.cpp"  INCLUDE_DIRS "."  EMBED_FILES ../data/index.html ../data/ota.html ../data/setup.html)
